# WordGame

./: CMakeLists.txt  README.md  makeWordList.c  treeWithUniqueChars.c  treeWithUniqueChars.h  wordGame.c
res/: wordDatabase.txt
src/: makeWordList.c  makeWordList.h  options.h  treeWithUniqueChars.c  treeWithUniqueChars.h  wordGame.c
unittest/: allFunctions_treeWithUniqueChars.h  test_treeWithUniqueChars.cpp
